force-app/main/default/objects/video_transcript_c_HOMEORG__dll/video_transcript_c_HOMEORG__dll.object-meta.xml
<CustomObject>
    <label>video_transcript_c_HOMEORG</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>