force-app/main/default/objects/video_transcript_c_HOMEORG__dll/fields/transcript_c__c.field-meta.xml
<CustomField>
    <fullName>transcript_c__c</fullName>
    <label>transcript</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>transcript_c</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>